stand alone XmileReader